--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install deps
-        run: sudo apt update && sudo apt install -y fontforge python3-fontforge unzip python3-fonttools fonttools
+        run: sudo apt update && sudo apt install -y fontforge python3-fontforge unzip p7zip python3-fonttools fonttools
 
       - name: Download Sarasa Gothic
         run: |
